grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.module_docstring,
      $.pragma_directive,
      $.import_statement,
      $.from_import_statement,
      $.struct_declaration,
      $.interface_declaration,
      $.event_declaration,
      $.enum_declaration,
      $.flag_declaration,
      $.uses_statement,
      $.initializes_statement,
      $.implements_statement,
      $.exports_declaration,
      $.function_definition,
      $.constant_declaration,
      $.state_variable_declaration,
      $._newline,
    ),

    pragma_directive: $ => seq(
      token(prec(2, /#\s*pragma[^\n]*/)),
      $._newline,
    ),

    import_statement: $ => seq(
      "import",
      $.import_item,
      repeat(seq(",", $.import_item)),
      optional(","),
      $._newline,
    ),

    dotted_name: $ => sep1($.identifier, "."),

    import_item: $ => seq(
      $.dotted_name,
      optional(seq("as", $.identifier)),
    ),

    imported_type: $ => seq($.identifier, repeat1(seq(".", $.identifier))),

    implements_statement: $ => seq(
      "implements",
      ":",
      $.identifier,
      $._newline,
    ),

    exports_declaration: $ => seq(
      "exports",
      ":",
      choice(
        $.attribute,
        alias(choice($.tuple, $.multiline_tuple), $.tuple),
      ),
      $._newline,
    ),

    constant_declaration: $ => seq(
      field("name", $.identifier),
      ":",
      choice(
        $.constant_type,
        seq("public", "(", $.constant_type, ")"),
      ),
      "=",
      field("value", $.expression),
      $._newline,
    ),

    constant_type: $ => seq(
      "constant",
      "(",
      optional($.soft_line_break),
      $.type,
      optional($.soft_line_break_end),
      ")",
    ),

    variable_annotation: $ => seq(
      choice("public", "reentrant", "immutable", "transient"),
      "(",
      optional($.soft_line_break),
      field("value", choice($.variable_annotation, $.type)),
      optional($.soft_line_break_end),
      ")",
    ),

    state_variable_declaration: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", choice($.variable_annotation, $.type)),
      optional(seq("=", field("value", $.expression))),
      $._newline,
    ),

    function_definition: $ => seq(
      repeat($.decorator),
      $.function_signature,
      ":",
      $.block,
    ),

    function_signature: $ => seq(
      "def",
      field("name", $.identifier),
      "(",
      optional($.parameter_list),
      ")",
      optional(seq("->", field("return_type", $.type))),
    ),

    parameter_list: $ => prec.right(choice(
      seq(
        $.parameter,
        repeat(seq(",", repeat($.soft_line_break), $.parameter)),
        optional(seq(",", repeat($.soft_line_break))),
        repeat($.soft_line_break),
      ),
      seq(
        repeat1($.soft_line_break),
        $.parameter,
        repeat(seq(",", repeat($.soft_line_break), $.parameter)),
        optional(seq(",", repeat($.soft_line_break))),
        repeat($.soft_line_break),
      ),
    )),

    decorator: $ => seq(
      "@",
      field("name", $.identifier),
      optional(seq("(", optional($.argument_list), ")")),
      $._newline,
    ),

    parameter: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", $.type),
      optional(seq(
        "=",
        field("default", $.expression),
      )),
    ),

    block: $ => seq(
      $._newline,
      $._indent,
      repeat1($.statement),
      $._dedent,
    ),

    pass_statement: $ => seq("pass", $._newline),

    break_statement: $ => seq("break", $._newline),

    continue_statement: $ => seq("continue", $._newline),

    return_statement: $ => seq(
      "return",
      optional(commaSep1($.expression)),
      $._newline,
    ),

    assert_statement: $ => seq(
      "assert",
      $.expression,
      optional(seq(",", $.expression)),
      $._newline,
    ),

    raise_statement: $ => seq(
      "raise",
      optional($.expression),
      $._newline,
    ),

    if_statement: $ => seq(
      "if",
      field("condition", $.expression),
      ":",
      $.block,
      repeat($.elif_clause),
      optional($.else_clause),
    ),

    elif_clause: $ => seq(
      "elif",
      field("condition", $.expression),
      ":",
      $.block,
    ),

    else_clause: $ => seq(
      "else",
      ":",
      $.block,
    ),

    for_statement: $ => seq(
      "for",
      field("target", choice($.typed_loop_variable, $.identifier)),
      "in",
      field("iterator", $.expression),
      ":",
      $.block,
    ),

    typed_loop_variable: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", $.type),
    ),

    argument: $ => choice(
      $.expression,
      $.keyword_argument,
    ),

    argument_list: $ => prec.right(choice(
      seq(
        $.argument,
        repeat(seq(",", repeat($.soft_line_break), $.argument)),
        optional(seq(",", repeat($.soft_line_break))),
        repeat($.soft_line_break),
      ),
      seq(
        repeat1($.soft_line_break),
        $.argument,
        repeat(seq(",", repeat($.soft_line_break), $.argument)),
        optional(seq(",", repeat($.soft_line_break))),
        repeat($.soft_line_break),
      ),
    )),

    soft_line_break: $ => seq(
      $._newline,
    ),

    soft_line_break_end: $ => $._newline,

    binary_expression: $ => choice(
      ...[
        ["or", PREC.or],
        ["and", PREC.and],
        ["in", PREC.compare],
        ["==", PREC.compare],
        ["!=", PREC.compare],
        ["<", PREC.compare],
        ["<=", PREC.compare],
        [">", PREC.compare],
        [">=", PREC.compare],
        ["|", PREC.bitwise_or],
        ["^", PREC.bitwise_xor],
        ["&", PREC.bitwise_and],
        ["<<", PREC.shift],
        [">>", PREC.shift],
        ["+", PREC.additive],
        ["-", PREC.additive],
        ["*", PREC.multiplicative],
        ["//", PREC.multiplicative],
        ["/", PREC.multiplicative],
        ["%", PREC.multiplicative],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field("left", $.expression),
          field("operator", operator),
          field("right", $.expression),
        )),
      ),
      prec.right(PREC.power, seq(
        field("left", $.expression),
        field("operator", "**"),
        field("right", $.expression),
      )),
      prec.left(PREC.compare, seq(
        field("left", $.expression),
        field("operator", seq("not", "in")),
        field("right", $.expression),
      )),
    ),

    call: $ => prec(PREC.call, seq(
      field("function", $.atom_expression),
      "(",
      optional($.argument_list),
      ")",
    )),

    attribute: $ => prec.left(PREC.attribute, seq(
      field("value", $.atom_expression),
      ".",
      field("attribute", $.identifier),
    )),

    subscript: $ => prec.left(PREC.attribute, seq(
      field("value", choice($.atom_expression, $.list)),
      "[",
      field("index", $.expression),
      "]",
    )),

    tuple: $ => seq(
      "(",
      commaSep1($.expression),
      optional(","),
      ")",
    ),

    atom_expression: $ => choice(
      $.identifier,
      $.subscript,
      $.attribute,
      $.call,
      $.atom,
    ),

    atom: $ => choice(
      $.integer,
      $.string,
      $.boolean,
      $.ellipsis,
      $.list,
      $.tuple,
      $.dict,
      $.special_builtin,
      $.parenthesized_expression,
    ),

    special_builtin: $ => choice(
      $.empty_builtin,
      $.abi_decode_builtin,
    ),

    empty_builtin: $ => seq(
      "empty",
      "(",
      optional($._newline),
      $.type,
      optional($._newline),
      ")",
    ),

    tuple_type: $ => choice(
      seq(
        "(",
        commaSep1($.type),
        optional(","),
        ")",
      ),
      seq(
        "(",
        repeat1($.soft_line_break),
        $.type,
        repeat(seq(optional($.soft_line_break), ",", repeat($.soft_line_break), $.type)),
        optional(seq(optional($.soft_line_break), ",")),
        repeat($.soft_line_break),
        ")",
      ),
    ),

    subscripted_type: $ => seq(
      $.identifier,
      "[",
      commaSep1(choice($.type, $.expression)),
      optional(","),
      "]",
    ),

    comment: _ => token(prec(1, seq("#", /.*/))),
    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
    integer: _ => token(choice(
      /0[xX][0-9A-Fa-f_]+/,
      /0[bB][01_]+/,
      /0[oO][0-7_]+/,
      /\d[\d_]*/,
    )),
    boolean: _ => choice("True", "False"),
    string: _ => token(choice(
      BYTE_STRING_DOUBLE,
      BYTE_STRING_SINGLE,
      STRING_DOUBLE,
      STRING_SINGLE,
    )),
  },
});
