test/corpus/multiline_public_annotation.txt
=========================
Multiline public annotation
=========================

commitment_count: public(
    HashMap[uint256, HashMap[bytes32, uint256]]
)

---

(source_file
  (state_variable_declaration
    name: (identifier)
    type: (variable_annotation
      (soft_line_break)
      value: (hash_map_type
        (identifier)
        (hash_map_type
          (identifier)
          (identifier)))
      (soft_line_break_end))))
