test/corpus/nested_control.txt
=========================
Nested control flow
=========================

@external
def demo(xs: DynArray[uint256, 10]):
    for i: uint256 in xs:
        if i > 3:
            raise "too big"
        elif i == 0:
            continue
        else:
            break

---
(source_file [0, 0] - [9, 0]
  (function_definition [0, 0] - [9, 0]
    (decorator [0, 0] - [1, 0]
      name: (identifier [0, 1] - [0, 9]))
    (function_signature [1, 0] - [1, 35]
      name: (identifier [1, 4] - [1, 8])
      (parameter_list [1, 9] - [1, 34]
        (parameter [1, 9] - [1, 34]
          name: (identifier [1, 9] - [1, 11])
          type: (dyn_array_type [1, 13] - [1, 34]
            (identifier [1, 22] - [1, 29])
            (atom_expression [1, 31] - [1, 33]
              (atom [1, 31] - [1, 33]
                (integer [1, 31] - [1, 33])))))))
    (block [2, 0] - [9, 0]
      (for_statement [2, 4] - [9, 0]
        target: (typed_loop_variable [2, 8] - [2, 18]
          name: (identifier [2, 8] - [2, 9])
          type: (identifier [2, 11] - [2, 18]))
        iterator: (atom_expression [2, 22] - [2, 24]
          (identifier [2, 22] - [2, 24]))
        (block [3, 0] - [9, 0]
          (if_statement [3, 8] - [9, 0]
            condition: (binary_expression [3, 11] - [3, 16]
              left: (atom_expression [3, 11] - [3, 12]
                (identifier [3, 11] - [3, 12]))
              right: (atom_expression [3, 15] - [3, 16]
                (atom [3, 15] - [3, 16]
                  (integer [3, 15] - [3, 16]))))
            (block [4, 0] - [5, 8]
              (raise_statement [4, 12] - [5, 0]
                (atom_expression [4, 18] - [4, 27]
                  (atom [4, 18] - [4, 27]
                    (string [4, 18] - [4, 27])))))
            (elif_clause [5, 8] - [7, 8]
              condition: (binary_expression [5, 13] - [5, 19]
                left: (atom_expression [5, 13] - [5, 14]
                  (identifier [5, 13] - [5, 14]))
                right: (atom_expression [5, 18] - [5, 19]
                  (atom [5, 18] - [5, 19]
                    (integer [5, 18] - [5, 19]))))
              (block [6, 0] - [7, 8]
                (continue_statement [6, 12] - [7, 0])))
            (else_clause [7, 8] - [9, 0]
              (block [8, 0] - [9, 0]
                (break_statement [8, 12] - [9, 0])))))))))

(source_file
  (function_definition
    (decorator
      name: (identifier))
    (function_signature
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (subscripted_type
            (identifier)
            (atom_expression
              (identifier))
            (atom_expression
              (atom
                (integer)))))))
    (block
      (for_statement
        target: (typed_loop_variable
          name: (identifier)
          type: (identifier))
        iterator: (atom_expression
          (identifier))
        (block
          (if_statement
            condition: (binary_expression
              left: (atom_expression
                (identifier))
              right: (atom_expression
                (atom
                  (integer))))
            (block
              (raise_statement
                (atom_expression
                  (atom
                    (string)))))
            (elif_clause
              condition: (binary_expression
                left: (atom_expression
                  (identifier))
                right: (atom_expression
                  (atom
                    (integer))))
              (block
                (continue_statement)))
            (else_clause
              (block
                (break_statement)))))))))
